--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>asm</groupId>
+            <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
-            <version>3.0</version>
+            <version>5.2</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
